--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Author Name",
-            "email": "author@email.com",
-            "homepage": "http://author.com"
+            "name": "Masoud Salehi",
+            "email": "mimsalehi1991@gmail.com",
+            "homepage": "https//roxo.ir"
         }
     ],
     "homepage": "https://github.com/mimsalehi/activecampaign",
